--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,6 @@
 /* common shared styles */
 body {
-    font-family: 'latu', sans-serif ;
+    font-family: '', sans-serif ;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -20,6 +20,8 @@ padding: 15px 35px;
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin:0 200px;
     
 }
 
@@ -45,4 +47,16 @@ nav li {
 nav a{
     text-decoration: none;
     color: #474747;
+}
+/* header related style */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px  150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
