--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,12 +16,25 @@ font-size: 20px;
 font-weight: 700;
 padding: 15px 35px;
 }
+
+.section-title{
+    color: #181818;
+    text-align: center;
+}
+.section-description{
+    color: , #757575;
+text-align: center;
+font-size: 18px;
+
+}
 /* nav related styles */
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin:0 200px;
+    font-size: 35px;
+    font-weight: 700px;
     
 }
 
@@ -51,12 +64,44 @@ nav a{
 /* header related style */
 .header{
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px  150px;
+    padding: 30px 30px 0px  150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner .profile-pic{
     width: 500px;
 }
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+font-weight: 700;
+margin-top: 5px;
+margin-bottom: 20px;
+
+}
+.banner-description{
+display: flex;
+width: 600px;
+}
+
+/* main section styles */
+
+
+/* about section styles */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+background: #FFF8F3;
+margin: 130px 0;
+}
+
