--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -146,4 +146,29 @@ box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 font-size: 30px;
 font-weight: 700;
 
+
  }
+
+ .resume-container{
+    display: flex;
+    gap: 50px;
+ }
+
+
+.resume-colum-institute, .resume-item-description{
+    color: #757575;
+   
+}
+ 
+.resume-item-title{
+    color:  #474747;
+font-size: 25px;
+font-weight: 700;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
