--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -159,7 +159,7 @@ font-weight: 700;
     color: #757575;
    
 }
- 
+
 .resume-item-title{
     color:  #474747;
 font-size: 25px;
@@ -175,7 +175,30 @@ font-weight: 700;
 /* footer style */
 footer{
     display: flex;
+    gap: 100px;
     background-color: #FFF8F3;
     margin-top: 100px;
     padding: 130px 200px;
+}
+footer input{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.footer-column{
+    width: 50%;
+    
+}
+.contact input[type=text], .contact input[type=email], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 20px 150px;
+    color: #757575;
+    border-radius: 5px;
+    background-color: greenyellow;
+    border: 0;
+    width: 100px;
+}
+.social-links a{
+    margin-left: 25px;
+
 }
